Update Utils.java
fallback to encode and decode primary overload functions (string, "type")